kubernetes/platform/foundation/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: burned-gateway
  namespace: gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    cert-manager.io/private-key-rotation-policy: "Never"
    argocd.argoproj.io/sync-wave: "31"
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      hostname: "burned.host"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: burned-host-tls
    - name: wildcard-https
      hostname: "*.burned.host"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: burned-host-tls
    - name: internal-https
      hostname: "*.internal.k8s.burned.host"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: burned-host-internal-tls
    - name: internal-apex-https
      hostname: "internal.k8s.burned.host"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: burned-host-internal-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-redirect-http
  namespace: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "31"
spec:
  parentRefs:
    - name: burned-gateway
      namespace: gateway-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
